--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -21,30 +21,30 @@ html {
 }
 
 .btn {
+	/* flex stuff */
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
 	gap: var(--space-2xs);
-	line-height: 1;
+	flex-grow: 0;
+	flex-shrink: 0;
+	/* --- */
 
 	position: relative;
-
 	transition: all 0.3s ease;
-
-	padding: var(--space-xs) var(--space-s);
+	padding: var(--space-2xs) var(--space-xs);
 
 	/* text */
-	font-size: var(--step-1);
+	font-size: var(--step-0);
+	line-height: 1;
 	font-weight: 600;
+	/* --- */
 
 	border-radius: var(--border-radius-1);
 	border: 1px solid transparent;
 
 	cursor: pointer;
-
-	flex-grow: 0;
-	flex-shrink: 0;
 
 	&:hover {
 		filter: brightness(105%);
