--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -30,8 +30,10 @@ html {
 
 
 button:disabled {
-	opacity: 0.5;
+	opacity: 0.1;
 	cursor: not-allowed;
+	filter:grayscale(1);
+	pointer-events: none;
 }
 
 .btn-group {
