--- a/src/lib/styles/components.css
+++ b/src/lib/styles/components.css
@@ -34,6 +34,7 @@
 }
 
 .btn--small {
+	/* FLEX */
 	display: flex;
 	gap: var(--space-2xs);
 	flex-grow: 0;
@@ -41,11 +42,10 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
+	/* --- */
 
 	min-height: 24px;
-
 	padding: var(--space-3xs) var(--space-xs);
-
 	border: 1px solid transparent;
 	border-radius: var(--border-radius-1);
 
@@ -55,7 +55,6 @@
 	/* --- */
 
 	transition: ease-in-out 0.3s;
-
 	cursor: pointer;
 	color: black;
 
@@ -93,4 +92,47 @@
 		background-color: var(--secondary);
 		color: var(--background);
 	}
+}
+
+.custom-toast {
+	font-size: var(--step-0) !important;
+	background-color: var(--background);
+
+	border: 1px solid var(--border);
+	&[data-type='error'] [data-title] {
+		color: var(--error-content);
+	}
+
+	&[data-type='success'] [data-title] {
+		color: var(--success-content);
+	}
+
+	&[data-type='warning'] [data-title] {
+		color: var(--warning-content);
+	}
+
+	&[data-type='info'] [data-title] {
+		color: var(--info-content);
+	}
+}
+
+.custom-toast [data-icon] {
+	width: 24px !important;
+	height: 24px !important;
+	aspect-ratio: 1 / 1;
+	flex-shrink: 0;
+	flex-grow: 0;
+}
+
+.custom-toast [data-icon] svg {
+	width: 24px !important;
+	height: 24px !important;
+	aspect-ratio: 1 / 1;
+	flex-shrink: 0;
+	flex-grow: 0;
+}
+
+:where([data-sonner-toast]) :where([data-description]) {
+	color: var(--copy-light) !important;
+	font-size: var(--step--1);
 }
